k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-demo-app
spec:
  selector:
    app: kafka-demo-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
